<resources>
    <string name="app_name">Adoptgram</string>
    <string name="imgdefaultdescription">imgDefaultDescription</string>
    <string name="login">Login</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="aun_no_tienes_cuenta">¿Aún no tienes cuenta? Puedes crear una</string>
    <string name="aqui">Aquí</string>
    <string name="bienvenido_a_adoptgram">¡Bienvenido a Adoptgram!</string>
    <string name="llena_el_siguiente_formulario">Llena el siguiente formulario para crear tu cuenta y formar parte de una gran comunidad.</string>
    <string name="elige_una_foto_de_perfil">Elige una foto de perfil:</string>
    <string name="nombre_s">Nombre(s):</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="apellido_s">Apellido(s):</string>
    <string name="escribe_tu_apellido">Escribe tu apellido</string>
    <string name="nickname_de_usuario">Nombre de Usuario:</string>
    <string name="escribe_un_nickname_para_identificarte">Escribe un nickname para identificarte</string>
    <string name="escribe_tu_correo_ej">escribe_tu@correo.ej</string>
    <string name="correo_electronico_">Correo Electrónico:</string>
    <string name="numero_de_telefono">Número de Teléfono:</string>
    <string name="_123_567_8900">(123)-567-8900</string>
    <string name="dots">•••••••</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena_">Contraseña:</string>
    <string name="mis_publicaciones">Publicaciones</string>
    <string name="perfil">Perfil</string>
    <string name="categor_as">Categorías</string>
    <string name="principal">Principal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_publicaciones_">Mis publicaciones</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="categorias">Categorías</string>
    <string name="puestos_en_adopcion_mas_recientes">Puestos en adopción mas recientes</string>
    <string name="buscar_animales_por_categoroas">Buscar animales por categorías</string>
    <string name="buscar_">Buscar</string>
    <string name="en_adopcion">En adopción:</string>
    <string name="retirados">Retirados</string>
    <string name="borradores">Borradores</string>
    <string name="nueva_publicacion">Nueva publicación</string>
    <string name="nombredeusuario">NombreDeUsuario</string>
    <string name="nombre_real_completo">Nombre Real Completo</string>
    <string name="coreo_electronico_placeholder_ej">coreo_electrónico@placeholder.ej</string>
    <string name="guardados">Guardados</string>
    <string name="_123_4567890__">(123)4567890</string>
    <string name="_editar_perfil_">Editar Perfil</string>
    <string name="nueva_punblicacion_titlebar">Nueva Publicación</string>
    <string name="llene_el_formulario_con_los_datos_del_animal_para_ponerlo_en_adopci_n">Llena el formulario con los datos del animal para ponerlo en adopción:</string>
    <string name="descripcion_general">Descripción general:</string>
    <string name="escribe_una_descripcion_breve_del_animal">Escribe una descripción breve del animal</string>
    <string name="edad__">Edad:</string>
    <string name="ej_2_a_os_5_meses_10_d_as">Ej.5 meses</string>
    <string name="especifique_unidad_de_tiempo_a_os_meses_semanas_d_as_etc">*Especifica la unidad de tiempo (años, meses, semanas, días, etc.)</string>
    <string name="especie">Especie:</string>
    <string name="detalles">Detalles:</string>
    <string name="describa_detalles_espec_ficos_importantes_del_animal_condiciones_m_dicas_tratos_necesarios_crcunstancias_especiales_etc">Describa detalles específicos importantes del animal (condiciones médicas, tratos necesarios, crcunstancias especiales, etc.)</string>
    <string name="imagenes_post">Imágenes:</string>
    <string name="agregar_imagen">Agregar Imagen</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="guardar_como_borrador">Guardar como Borrador</string>
    <string name="publicar_ahora">Publicar ahora</string>
    <string name="editar_datos_del_perfil">Editar Datos del Perfil</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="nombre____">Nombre(s):</string>
    <string name="default_info_placeholder">Default</string>
    <string name="apellido_s____">Apellido(s):</string>
    <string name="nombre_de_usuario_____">Nombre de Usuario:</string>
    <string name="apellidos_h">Apellidos</string>
    <string name="no_puedes_deja_este_campo_vac_o">No puedes deja este campo vacío</string>
    <string name="correo_elect_nico___">Correo electónico:</string>
    <string name="n_mero_de_tel_fono____">Número de Teléfono:</string>
    <string name="_0000000000_">0000000000</string>
    <string name="_direccion_">Dirección:</string>
    <string name="contrase_a______">Contraseña:</string>
    <string name="_guardar_cambios">Guardar Cambios</string>
    <string name="_escribe_tu_direccion">Escribe tu dirección</string>
    <string name="__direccion">Dirección:</string>
    <string name="especie_card">Especie</string>
    <string name="descripci_n_del_animal_card">Descripción del animal</string>
    <string name="edad_card">Edad</string>
    <string name="ficha_del_animal">Ficha del animal</string>
    <string name="guardar__________">Guardar</string>
    <string name="_comentarios_">Comentarios</string>
    <string name="descripci_n_espec_fica_del_animal_y_su_situaci_n_de_d_nde_es_cuidados_especiales_condiciones_m_dicas_etc">Descripción específica del animal y su situación, (de dónde es, cuidados especiales, condiciones médicas, etc.)</string>
    <string name="edad_page">Edad</string>
    <string name="descripci_n_page">Descripción</string>
    <string name="especie_page">Especie</string>
    <string name="en_adopci_n_page_">En Adopción</string>
    <string name="nombre_de_usuario__">Nombre de Usuario</string>
    <string name="contenido_del_comentario__">Contenido del Comentario</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="contrase_a_nueva">Nueva contraseña:</string>
    <string name="contrase_a_repetir">Repetir contraseña:</string>
    <string name="actualizar_contrase_a">Actualizar Contraseña</string>
    <string name="escribe_un_comentario___">Escribe un comentario...</string>
    <string name="_publicar_comentario_">Publicar Comentario</string>
    <string name="datos_contacto">Datos de contacto</string>
    <string name="nickname">Nickname:</string>
    <string name="telefono">Teléfono:</string>
    <string name="editar_btn">Editar</string>
    <string name="eliminar_btn">Eliminar</string>
    <string name="retirar">Retirar</string>
</resources>