<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mercury">

    <LinearLayout
        android:id="@+id/titlebarProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/yellow"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/lblTitle_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/mi_perfil"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_pets" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfilePic_profile"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:src="@drawable/img_profile_placeholder"
        app:civ_border_color="@color/cyan"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebarProfileFragment" />

    <TextView
        android:id="@+id/lblUsername_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nombredeusuario"
        android:textColor="@color/cyan"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfilePic_profile" />

    <TextView
        android:id="@+id/lblName_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nombre_real_completo"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_person_black"
        android:drawablePadding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername_profile" />

    <TextView
        android:id="@+id/lblEmail_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/coreo_electronico_placeholder_ej"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_email_black"
        android:drawablePadding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName_profile" />

    <TextView
        android:id="@+id/lblPhone_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_123_4567890__"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_phone_black"
        android:drawablePadding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail_profile" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone_profile">

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaved_profile"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/guardados"
        android:background="@drawable/custom_button_circle"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:drawableStartCompat="@drawable/ic_bookmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEdit_profile"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/_editar_perfil_"
        android:background="@drawable/custom_button_circle"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:drawableStartCompat="@drawable/ic_edit_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnSaved_profile"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout_profile"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button_circle"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:text="@string/cerrar_sesion"
        app:drawableStartCompat="@android:drawable/ic_lock_power_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>